src/test/ui/argument-suggestions/mixed_cases.stderr
error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:10:3
   |
LL |   two_args(1, "", X {});
   |   ^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:5:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: make these changes
   |
LL |   two_args(1, {f32});
   |   ^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:11:3
   |
LL |   three_args(1, "", X {}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:14:3
   |
LL |   three_args(1, X {});
   |   ^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, {f32}, {&str});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:17:3
   |
LL |   three_args(1, "", X {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:20:3
   |
LL |   three_args("", X {}, 1);
   |   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: multiple arguments to this function are incorrect
  --> $DIR/mixed_cases.rs:23:3
   |
LL |   three_args("", 1);
   |   ^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/mixed_cases.rs:6:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, {f32}, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0059`.
